--- a/index.html
+++ b/index.html
@@ -221,7 +221,6 @@
         <script src='js/id/validate.js'></script>
 
         <script src='js/lib/locale.js'></script>
-        <script src='data/introGraph.js'></script>
     </head>
     <body>
         <div id='id-container'></div>
@@ -232,21 +231,17 @@
                 d3.select('#id-container')
                     .call(id.ui());
 
-                d3.select('#about').insert('li', '.user-list')
+                /*d3.select('#about').insert('li', '.user-list')
                     .attr('class', 'source-switch')
                     .call(iD.ui.SourceSwitch(id)
                         .keys([
                             {
-                                "url": "http://www.openstreetmap.org",
-                                "oauth_consumer_key": "5A043yRSEugj4DJ5TljuapfnrflWDte8jTOcWLlT",
-                                "oauth_secret": "aB3jKq1TRsCOUrfOIZ6oQMEDmv2ptV76PA54NGLL"
-                            },
-                            {
-                                "url": "http://api06.dev.openstreetmap.org",
-                                "oauth_consumer_key": "zwQZFivccHkLs3a8Rq5CoS412fE5aPCXDw9DZj7R",
-                                "oauth_secret": "aMnOOCwExO2XYtRVWJ1bI9QOdqh1cay2UgpbhA6p"
+                                "url": "http://kta.ch.am",
+                                "oauth_consumer_key": "jrNMWkgd2hJOvczrgNyM0KzgN7p7ZUdnV6GDdMCq",
+                                "oauth_secret": "f1GBw9SnPBGnCW6WuT5gbCp4FZoJ46GU658m9Fzu"
                             }
                         ]));
+                */
             });
         </script>
     </body>
